fix invisible text entry on macOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,7 @@ button {
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+  min-height: var(--lineheight);
 }
 
 div {
